--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -2,6 +2,17 @@
     <ul class="nav nav-pills">
         <li role="presentation" class=""><a href="#">EinkaufsListe</a></li>
         <li role="presentation"><a href="#">Rezeptbuch</a></li>
+        <li>
+          <div class="dropdown" appDropdown>
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <li><a class="dropdown-item" href="#">Speichern</a></li>
+              <li><a class="dropdown-item" href="#">Laden</a></li>
+            </div>
+          </div>
+        </li>
       </ul>
 </header>
 <hr>
