--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,23 +1,23 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="{{selectedRecipe?.imagePath}}" alt="" class="img-responsive">
+        <img src="{{selectedRecipe.imagePath}}" alt="" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>{{selectedRecipe?.name}}</h1>
+        <h1>{{selectedRecipe.name}}</h1>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">Zur Einkaufsliste</button>
+        <button class="btn btn-success" (click)="onAddToList()">Zur Einkaufsliste</button>
         <button class="btn btn-primary">Bearbeiten</button>
         <button class="btn btn-danger">Löschen</button>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <p>{{selectedRecipe?.description}}</p>
+        <p>{{selectedRecipe.description}}</p>
     </div>
 </div>
 <div class="row">
