--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">Neues Rezept</button>
+        <button (click)="onNewRecipe()" class="btn btn-success">Neues Rezept</button>
     </div>
 </div>
 <hr>
@@ -8,8 +8,9 @@
     <div class="col-xs-12">
         <ul class="list-group">
             <app-recipe-item
-             *ngFor="let recipe of recipes"
+             *ngFor="let recipe of recipes; let i = index"
              [recipe]="recipe"
+             [recipeId]="i"
              ></app-recipe-item>
         </ul>
     </div>
